FreeRADIUS 1.0.2 ; $Date$, urgency=medium
    * Don't declare zero-length arrays in rlm_passwd
	* Bug fix to make udpfromto code work
	* radrelay shouldn't dump core if it can't read a VP from the
	  detail file.
	* Only initialize the random pool once.
	* In rlm_sql, don't escape characters twice.
	* Fix MD4 calculation on big-endian machines.
	* In rlm_ldap, only claim Auth-Type if a plain text password is present.
	* Treat Quintium VSAs like Cisco VSAs
	* Locking fixes in threading code
	* rlm_krb5 includes /usr/include/et for Fedora Core

FreeRADIUS 1.0.1 ; Date: 2004/09/02 10:52:03 , urgency=high
	Denial-of-Service Security Fix
	* Fix two remote crashes and a memory leak in RADIUS packet
	  decoding.

	Bug fixes.
	* Fix premature "success" during EAP/TLS handshake.
	* Dictionary handling now complains about identically named
	  values with different values, and rejects dictionary
	  entries with bad data
	* Update dictionaries to deal with the above change.

FreeRADIUS 1.0.0 ; Date: 2004/07/17 06:31:32, urgency=low
	pre3 -> release
	* Fix LDAP dictionary map loading.
	* Check login time allowance to packet timestampe where available.
	* Compilation fix for machines withouth <pthread.h>.
	* Man page improvements.
	* Grab latest config.sub and config.guess (2004-03-12).

	pre2 -> pre3
	* Make IPv6 support work better.
	* Updated 3com dictionary.
	* Fixed MD5 code to be more portable.

	pre1 -> pre2
	* Updated SQL onoff query
	* Updated Nomadix, RedBack and Valemont dictionaries.
	* MD4/MD5 fixes.
	* Don't complain about ports we're listening on when HUP'd.
	* Permit -i to work for radclient.
	* Fix bug in new proxy code.
	* rlm_passwd is now a little friendlier.
	
	Non source-code changes
	* Preliminary tests indicate that the server builds and runs on
	  Interix (SFU on Windows XP).
	* EAP module configuration is now in "raddb/eap.conf", as it was
	  getting large.
	* Updated GPL boilerplate in the source.
	* Added new RFC's to doc/rfc/